Prevent cell contents from overflowing.

--- a/app/assets/stylesheets/cell.css
+++ b/app/assets/stylesheets/cell.css
@@ -6,6 +6,7 @@ li.cell {
   border-bottom: 1px solid #c0c0c0;
   font-size: 19px;
   width: 175px;
+  overflow: hidden;
 }
 
 li.cell .cell-contents {
